Edited server.js to print date time when accessing with /hello

--- a/public/COMP4711/COMP4711.html
+++ b/public/COMP4711/COMP4711.html
@@ -19,6 +19,10 @@
                 <ul>
                     <li><a href="./Labs/3/QuizGenerator/admin.html">Quiz Generator</a></li>
                 </ul>
+            <li>Lab4</li>
+                <ul>
+                    <li><a href="./Labs/4/QuizQuestions/COMP4711_Lab3.html">Quiz Questions</a></li>
+                </ul>
         </ul>
         <br>
         <button type="button" onclick="GoBack()">BACK</button>
