add link to the memory game

--- a/public/COMP4711/COMP4711.html
+++ b/public/COMP4711/COMP4711.html
@@ -23,6 +23,7 @@
                 <ul>
                     <li><a href="./Labs/4/QuizQuestions/COMP4711_Lab3.html">Quiz Questions</a></li>
                 </ul>
+            <li><a href="./MemoryGame/index.html">Memory Game</a></li>
         </ul>
         <br>
         <button type="button" onclick="GoBack()">BACK</button>
