Lab6 initial commit

--- a/public/COMP4711/COMP4711.html
+++ b/public/COMP4711/COMP4711.html
@@ -24,6 +24,11 @@
                     <li><a href="./Labs/4/QuizQuestions/COMP4711_Lab3.html">Quiz Questions</a></li>
                 </ul>
             <li><a href="./MemoryGame/index.html">Memory Game</a></li>
+            <li>Lab6</li>
+                <ul>
+                    <li><a href="./Labs/6/QuizGenerator/admin.html">Quiz Generator Admin</a></li>
+                    <li><a href="./Labs/6/QuizGenerator/user.html">Quiz Generator User</a></li>
+                </ul>
         </ul>
         <br>
         <button type="button" onclick="GoBack()">BACK</button>
