Added scoring to user page

--- a/public/COMP4711/Labs/6/QuizGenerator/user.html
+++ b/public/COMP4711/Labs/6/QuizGenerator/user.html
@@ -13,6 +13,9 @@
     </head>
     <body>
         <h1>Lab 3 Admin Quiz Creation</h1>
+        <div class="scoreContainer">
+            
+        </div>
         <div class="list_of_questions" >
             
         </div>
