Add map api calls

--- a/public/COMP4711/COMP4711.html
+++ b/public/COMP4711/COMP4711.html
@@ -29,6 +29,11 @@
                     <li><a href="./Labs/6/QuizGenerator/admin.html">Quiz Generator Admin</a></li>
                     <li><a href="./Labs/6/QuizGenerator/user.html">Quiz Generator User</a></li>
                 </ul>
+            <li>Lab7</li>
+                <ul>
+                    <li><a href="./Labs/7/QuizQuestions/COMP4711_Lab7.html">Quiz Questions</a></li>
+                    <li><a href="./Labs/7/map.html">Map</a></li>
+                </ul>
         </ul>
         <br>
         <button type="button" onclick="GoBack()">BACK</button>
