Edit path for html page

--- a/public/COMP4711/COMP4711.html
+++ b/public/COMP4711/COMP4711.html
@@ -31,7 +31,8 @@
                 </ul>
             <li>Lab7</li>
                 <ul>
-                    <li><a href="./Labs/7/QuizQuestions/COMP4711_Lab7.html">Quiz Questions</a></li>
+                    <li><a href="./Labs/7/QuizQuestions/admin.html">Quiz Generator Admin</a></li>
+                    <li><a href="./Labs/7/QuizQuestions/user.html">Quiz Generator User</a></li>
                     <li><a href="./Labs/7/map.html">Map</a></li>
                 </ul>
         </ul>
